--- a/package.json
+++ b/package.json
@@ -9,12 +9,17 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "loaders.css": "^0.1.2",
+    "lodash": "^4.17.21",
     "mapbox-gl": "^2.11.0",
     "next": "13.0.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-icons": "^4.6.0",
-    "react-map-gl": "^7.0.19"
+    "react-loader-spinner": "^5.3.4",
+    "react-loaders": "^3.0.1",
+    "react-map-gl": "^7.0.19",
+    "react-query": "^3.39.2"
   },
   "devDependencies": {
     "@types/node": "18.11.7",
