--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "firebase": "^9.15.0",
     "loaders.css": "^0.1.2",
     "lodash": "^4.17.21",
     "mapbox-gl": "^2.11.0",
