--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "mapbox-gl": "^2.11.0",
     "next": "13.0.0",
     "react": "18.2.0",
+    "react-device-detect": "^2.2.2",
     "react-dom": "18.2.0",
     "react-icons": "^4.6.0",
     "react-loader-spinner": "^5.3.4",
