--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@types/common-tags": "^1.8.1",
     "firebase": "^9.15.0",
     "loaders.css": "^0.1.2",
     "lodash": "^4.17.21",
@@ -29,6 +30,8 @@
     "@types/react-dom": "18.0.8",
     "eslint": "8.26.0",
     "eslint-config-next": "13.0.0",
+    "keyv": "^4.5.2",
+    "node-fetch": "^3.3.0",
     "typescript": "4.8.4"
   }
 }
